# a2x

./: .build.yml  .gitignore  CHANGELOG.md  COPYING  Cargo.toml  README.md
.config/: bacon.toml
a2x-derive/: Cargo.toml
a2x-derive/src/: lib.rs
samples/retail/: README.md  attr.alfa  common.alfa  empty.alfa  main.alfa  oblig.alfa
src/: alfa.pest  args.rs  context.rs  errors.rs  lib.rs  main.rs
src/ast/: advice.rs  attribute.rs  category.rs  condition.rs  constant.rs  designator.rs  function.rs  import.rs  infix.rs  mod.rs  namespace.rs  naming.rs  obligation.rs  operator.rs  policy.rs  policycombinator.rs  policyset.rs  prescription.rs  rule.rs  rulecombinator.rs  std_attributes.rs  std_functions.rs  std_infix.rs  target.rs  tests.rs  typedef.rs
src/xacml/: mod.rs  xapply.rs  xattr_designator.rs  xcondition.rs  xexpression.rs  xfunction.rs  xpolicy.rs  xpolicyentry.rs  xpolicyset.rs  xprescription.rs  xrule.rs  xtarget.rs
tests/: complex_e2e.rs  import.rs  minimal.rs  policy.rs  policy_condition.rs  policy_obligation.rs  policy_recursion.rs  policyset.rs  policyset_condition.rs  prescription_full.rs  rule.rs  rule_advice.rs  rule_condition.rs  rule_obligation.rs  rule_target.rs
tests/common/: mod.rs
